<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!--    <RelativeLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content">-->

<!--        <Button-->
<!--            android:id="@+id/FilterBackBtn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:drawableLeft="@drawable/ic_back_btn"-->
<!--            android:text="@string/back"-->
<!--            android:textColor="#4c4c4c"-->
<!--            android:textSize="14sp"-->
<!--            app:backgroundTint="#ffff"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->
<!--    </RelativeLayout>-->

        <LinearLayout
            android:id="@+id/SortLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/TextSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort"
                android:textColor="#7f7fff"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/SortSpinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/PlatformLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/PlatformText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/platform"
                android:textColor="#7f7fff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/YoutubeBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:background="@color/white"
                android:contentDescription="@string/youtube"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_youtube" />

            <ImageButton
                android:id="@+id/TwitchBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/white"
                android:contentDescription="@string/twitch"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_twitch" />

            <ImageButton
                android:id="@+id/TwicasBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="5dp"
                android:background="@color/white"
                android:contentDescription="@string/twitcas"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_twitcas_filter" />

            <ImageButton
                android:id="@+id/niconicobtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:contentDescription="@string/niconico"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_niconico_filter" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">
        <RelativeLayout
            android:id="@+id/ApplyLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="40dp">
            <Button
                android:id="@+id/ApplyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:backgroundTint="#fafafa"
                android:textColor="#7f7fff"
                android:textSize="20sp"
                />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>